--- a/cgi/home.html
+++ b/cgi/home.html
@@ -26,7 +26,7 @@
 
     <products></products>
 
-    <input id="user-token" value="100637654525149186" /><br />
+    <input id="user-token">{{user-token}}<br />
     <button id="info-button">Authorize</button><br />
     <p>
       Create product<br />
